--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:server": "cd functions && npm run serve",
+    "start:all": "react-scripts start & npm run start:server",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
