--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chatkit-demo",
   "version": "2.1.0",
-  "homepage": "https://pusher.github.io/react-slack-clone",
+  "homepage": "https://recoded-mujz.firebaseapp.com/",
   "dependencies": {
     "@pusher/chatkit-client": "^1.3.0",
     "react": "^16.2.0",
@@ -16,7 +16,8 @@
     "start:all": "react-scripts start & npm run start:server",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "firebase deploy --only hosting"
   },
   "browserslist": {
     "development": [
