--- a/functions/package.json
+++ b/functions/package.json
@@ -5,7 +5,7 @@
     "lint": "eslint .",
     "serve": "firebase serve --only functions",
     "shell": "firebase functions:shell",
-    "start": "npm run shell",
+    "start": "node ./server.js",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
